<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navmenu.menuitems.payoff.PayoffRequestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/first_name_hint" />

                    <TextView
                        android:id="@+id/first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryVariant"
                        android:text="@string/first_name_example"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/last_name_hint"/>

                    <TextView
                        android:id="@+id/last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryVariant"
                        android:text="@string/last_name_example"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_help_outline"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/loan_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="@color/colorOnSurfaceVariant"
                    android:text="@string/loan_number_string"/>

                <TextView
                    android:id="@+id/loan_number_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryVariant"
                    android:text="@string/loan_example_string">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_selection_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputLayoutStyle">

                    <EditText
                        android:id="@+id/estimated_payoff_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="true"
                        android:textSize="15dp"
                        android:drawableRight="@drawable/ic_icon_event_green"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondaryVariant"
                        android:text="@string/example_date_estimated_payoff"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/need_payoff_return_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="true"
                        android:textSize="15dp"
                        android:drawableRight="@drawable/ic_icon_event_green"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondaryVariant"
                        android:text="@string/example_need_payoff_date"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/send_payoff_information_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/send_payoff_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/send_payoff_request" />

                <RadioGroup
                    android:id="@+id/send_payoff_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp">

                    <RadioButton
                        android:id="@+id/mail_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layoutDirection="rtl"
                        android:text="@string/mail_to_address_on"/>

                    <RadioButton
                        android:id="@+id/email_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layoutDirection="rtl"
                        android:text="@string/email_to_address_on"/>
                    <RadioButton
                        android:id="@+id/display_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layoutDirection="rtl"
                        android:text="@string/display_on_documents"/>
                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/contact_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondaryVariant"
                    android:text="@string/contact_phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/payoff_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_button"
                android:textColor="@color/colorOnPrimary"
                android:text="@string/action_submit"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>