<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/logo_fp_image"
        android:layout_width="312dp"
        android:layout_height="158dp"
        android:contentDescription="@string/login_image_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="319dp"
        android:layout_height="63dp"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_profile_shape"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loan_input_layout"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_input_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loan_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loan_details_title"
            android:drawableEnd="@drawable/ic_home_black"
            android:drawableTint="@color/colorOnPrimaryVariant"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ssn_tin_input_layout"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loan_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ssn_tin_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_ssn_tin"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:drawableTint="@color/colorOnPrimaryVariant"
            android:drawableEnd="@drawable/ic_ssn_image"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="317dp"
        android:layout_height="57dp"
        android:layout_gravity="start"
        android:background="@drawable/selector_button"
        android:enabled="false"
        android:text="@string/action_submit"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssn_tin_input_layout"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/contact_clickable_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableStart="@drawable/ic_contact_shape"
        android:drawablePadding="4dp"
        android:enabled="true"
        android:focusable="true"
        android:text="@string/contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_button" />

</androidx.constraintlayout.widget.ConstraintLayout>